style.css
:root {
    --web-background-color: rgba(202, 202, 202, 0.849);
}

body {
    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, Adwaita Sans, Cantarell, Ubuntu, roboto, noto, helvetica, arial, sans-serif;
    background-color: var(--web-background-color);
}
    

.container {
    display: grid;
    grid-template-columns: 1fr 4fr 1.5fr;
}

.header {
    font-family: 'Roboto';
    grid-column: 2 / 4;
    background-color: white;
    box-shadow: 0px 3px 5px gray;
    padding: 1rem 3rem;
}

.nav-bar{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 2rem;
}

#search-bar {
    background-color: var(--web-background-color);
    border-radius: 10px;
    border: none;
    width: 40rem;
}

.nav-bar .left,
.nav-bar .right {
    display: flex;
    align-items: center;
    gap: 20px;
}

.right .user-name{
    font-weight: bold;
    font-size: 1.2rem;
}

.profile-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.profile-bar .left {
    display: flex;
    gap: 1rem;
    align-items: center;
    font-weight:bold;
}

.profile-bar .right {
    display: flex;
    gap: 2rem;
}

.right button {
    padding: 0.5rem 2rem;
    background-color: rgb(34, 113, 187);
    color: white;
    font-weight:500;
    border: none;
    border-radius: 9999px; /* 9999px is a CSS trick that ensures rectangle elements are rounded into pills regardless of size */

}

.sidebar {
    grid-row: 1 / 3;

    display: flex;
    flex-direction: column;
    gap: 2rem;

    background-color:rgb(96, 165, 211);
    font-family: 'Roboto';
    font-weight: bold;

    padding: 2rem;
}

.sidebar a {
    display: flex;
    gap: 1rem;
    width: max-content;  

    text-decoration: none;    
    color: white;
    font-size: 1.5rem;

    padding-bottom: 1rem;
}

.sidebar svg {
    flex-shrink: 0;
}

.sidebar .dashboard-link {
    font-size: 2rem;
}

.dashboard-link svg {
    width: 3rem;
}

.project-container {
    grid-column: 2 / 3; 
    padding: 2rem;
}

.card-container {
    /* max-width: 800px; */
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    gap: 2rem;
    margin-top: 1rem;
}

.project-container .card {
    background-color: white;
    border-radius: 16px;
    padding: 2rem;
    border-left: 10px inset rgb(255, 210, 10);
    box-shadow: 5px 5px 5px gray;

}

.card .title {
    font-size: 1.1rem;
    font-weight: bold;
}

.card .info {
    color: rgb(97, 97, 97);
    line-height: 1.2;
}

.card-buttons {
    display: flex;
    margin-top: 2rem;
    justify-content: end;
    gap: 2rem;
}

.current-event-container {
    grid-column: 3 / 4;
    padding: 2rem;
    /* background-color: var(--web-background-color); */

}

.announcement-list {
    background-color: white;
    border-radius: 16px;
    padding: 2rem;
    margin-top: 1rem;
    box-shadow: 5px 5px 5px gray;

}

.announcement-list hr {
    margin: 2rem 0;
}

.announcement-list .card {
    font-size: .8rem;
}

.announcement-list .title {
    font-size: 1rem;
}

.trending-container {
    background-color: white;
    border-radius: 16px;
    padding: 2rem;
    margin-top: 1rem;
    box-shadow: 5px 5px 5px gray;
}

.trending-list{
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.trending-list .card{
    display:flex;
    align-items: center;
    gap: 1rem;
}

.small-profile-picture{
    border-radius: 50%; /* 50% ensures that a square element is rounded into a circle regardless of its size */
    width: 3rem;
}

.large-profile-picture {
    border-radius: 50%;
    width: 5rem;
}    

.avatar-one{
    background-color: rgb(255, 251, 0);
}

img {
    width: 1.5rem;
}

ul {
    list-style: none;     /* removes bullets/numbers */
    margin: 0;            /* resets outer margin */
    padding: 0;           /* resets left indent */
}

svg{
    width: 2rem;
    fill: white;
}

